--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
+    "@plaiceholder/next": "^3.0.0",
     "@prisma/client": "^5.21.1",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-avatar": "^1.1.0",
@@ -30,6 +31,7 @@
     "lucide-react": "^0.418.0",
     "next": "14.2.5",
     "next-auth": "^5.0.0-beta.22",
+    "plaiceholder": "^3.0.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
